# nashishei

./: .env.example  .gitignore  Makefile  audit-2026-06-30.md  docker-compose.yml
.claude/commands/: devlog.md  summaryfordummy.md
api/: Dockerfile  Dockerfile.dev  fly.toml  go.mod  go.sum
api/cmd/api/: main.go
api/internal/config/: config.go
api/internal/db/: db.go
api/internal/handler/: auth.go  detect.go  detect_client.go  detections.go  health.go  images.go  og.go  persons.go  share.go  tags.go
api/internal/middleware/: auth.go
api/internal/storage/: local.go  r2.go  storage.go
db/: init.sql
db/migrations/: 001_initial.sql  002_seed.sql  003_pgvector.sql  004_image_title.sql
docs/: DEVLOG.md  INBOX.md  Nashishei_ML_Migration_Diagnostic_Report.md  PLAN-search-by-person-or-title.md  PRODUCTION-DEPLOY-PLAN.md  PROJECT.md  SPIKE-browser-arcface.md  SPIKE-viewing-at-scale.md  SUMMARYFORDUMMY.md  VIEWER-USER-FLOW.md  color-tokens.csv  qcoverlay-selection-refactor.md  tauri-exe-explainer.md  tauri-to-browser-ml-migration.md  updated-architechture.md  webgpu-onnx-explainer.md
frontend/: .env.local.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/functions/api/: [[path]].js
frontend/src/: App.css  App.tsx  index.css  main.tsx  tokens.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: CastGrid.tsx  DetectingFacesOverlay.css  (+10 more)
ml/: Dockerfile  build_sidecar.ps1  main.py  patch_det_ceil_mode.py  requirements.txt  sidecar_main.py
(+16 files in other folders)
